Fixed comment author alignment

--- a/scss/06-comments/index.scss
+++ b/scss/06-comments/index.scss
@@ -53,6 +53,7 @@
   .comment-author {
     display: inline-grid;
     grid-template-columns: 42px minmax(0, auto);
+    justify-content: start;
     grid-column: 1 / 3;
     grid-row: 1 / 3;
     gap: 1em;
